k8s/api-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    component: api
  ports:
    - port: 5000
      targetPort: 5000
