k8s/api-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-port-service
spec:
  type: NodePort
  selector:
    component: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
