k8s/client-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-node-port-service
spec:
  type: NodePort
  selector:
    component: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
