k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: client-node-port-service
              servicePort: 80
          - path: /api/*
            backend:
              serviceName: api-node-port-service
              servicePort: 5000
          - path: /auth/*
            backend:
              serviceName: api-node-port-service
              servicePort: 5000
          - path: /user/*
            backend:
              serviceName: api-node-port-service
              servicePort: 5000
